added auth0 user authentication
